--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 &#9888;
             </div>
             <div style="color:#fff;font-size:1.5rem;text-align:center;margin-bottom:24px;">
-                This page is under Dev
+                This page is under dev
             </div>
             <button id="devWarningOkBtn" style="padding:10px 32px;font-size:1.1rem;border:none;border-radius:6px;background:#ffcc00;color:#222;font-weight:bold;cursor:pointer;box-shadow:0 2px 8px #0004;">
                 OK
