--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
             transition: color 0.2s, transform 0.2s;
         }
 
-        .as-home-btn:hover,
-        .as-home-btn:focus {
-            color: #04AA6D;
-            transform: scale(1.12);
-        }
+            .as-home-btn:hover,
+            .as-home-btn:focus {
+                color: #04AA6D;
+                transform: scale(1.12);
+            }
 
         .timeline-container {
             display: flex;
@@ -106,11 +106,11 @@
             margin: 0 0 0 0;
         }
 
-        .timeline-card:hover, .timeline-entry:not(.blur) .timeline-card {
-            box-shadow: 0 8px 32px #04AA6D33, 0 4px 24px #000a;
-            opacity: 1;
-            transform: scale(1.03);
-        }
+            .timeline-card:hover, .timeline-entry:not(.blur) .timeline-card {
+                box-shadow: 0 8px 32px #04AA6D33, 0 4px 24px #000a;
+                opacity: 1;
+                transform: scale(1.03);
+            }
 
         .timeline-entry.left .timeline-card {
             margin-right: auto;
@@ -138,39 +138,44 @@
             transform: scale(1);
         }
 
-        /* --- MOBILE DYNAMIC TIMELINE --- */
+        /* --- MOBILE: Centered timeline --- */
         @media (max-width: 700px) {
             .timeline-line {
-                left: 18px;
+                left: 50%;
                 width: 4px;
-                transform: none;
+                transform: translateX(-50%);
             }
 
             .timeline-entry,
             .timeline-entry.left,
             .timeline-entry.right {
-                flex-direction: row;
-                align-items: flex-start;
+                flex-direction: column;
+                align-items: center;
                 min-height: 120px;
                 margin: 48px 0;
             }
 
             .timeline-dot {
-                left: 0;
-                top: 32px;
+                position: relative;
+                margin: 0 auto 16px auto;
+                left: auto;
+                top: auto;
                 transform: none;
                 width: 16px;
                 height: 16px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .timeline-card {
                 min-width: 0;
-                width: calc(100vw - 56px);
+                width: 90vw;
                 max-width: 98vw;
                 font-size: 1rem;
                 padding: 16px 12px;
-                margin-left: 36px;
-                margin-right: 0;
+                margin: 0;
+                margin-top: 0;
             }
         }
     </style>
